--- a/reto2.html
+++ b/reto2.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 
 <body>
-    <script src="./js/script.js"></script>
+
+    <script src="./js/reto2.js"></script>
 </body>
 
 </html>
