utilizando una nueva estructura

--- a/index.html
+++ b/index.html
@@ -4,12 +4,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/sample.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <title>Document</title>
 </head>
 
 <body>
-    <script src="./js/script.js"></script>
+    <button id="boton">Click</button>
+    <div id="lista"></div>
+    <!-- <div data-aos="fade-up" class="box box1"></div>
+    <div class="box box2" data-aos="fade-up"></div>
+    <div class="box box3" data-aos="fade-up"></div>
+    <div class="box box4" data-aos="fade-up"></div>
+    <div class="box box5" data-aos="fade-up"></div>
+    <div class="box box6" data-aos="fade-up"></div>
+    <div class="box box7" data-aos="fade-up"></div>
+    <div class="box box8" data-aos="fade-up"></div>
+    <div class="box box9" data-aos="fade-up"></div>
+    <div class="box box10"></div>
+
+    <script>
+        AOS.init({
+            once: true
+        })
+    </script> -->
+
+    <script src="./js/reto/main.js" type="module"></script>
 </body>
 
 </html>
