--- a/pages/index.html
+++ b/pages/index.html
@@ -4,28 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/index.css">
-    <title>Manejo de Botones</title>
+    <link href="https://fonts.googleapis.com/css2?family=Sora:wght@100..800&display=swap" rel="stylesheet">
+    <title>Document</title>
 </head>
 
 <body>
-    <form>
-        <div id="mensaje">
-            <label>Número de wsp</label>
-            <input type="text" id="numeroWsp">
-        </div>
-
-        <div id="mensaje">
-            <label>Mensaje para whatsapp</label>
-            <input type="text" id="mensajeWsp">
-        </div>
-
-        <button type="button" id="enviarMensajeBoton">Enviar</button>
-    </form>
-
-    <button id="modoOscuro">Modo oscuro</button>
-
-    <script src="./script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 
 </html>
